--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,6 @@ body {
   color: #333;
 }
 
-
-/* Navbar general */
 .navbar {
   width: 100%;
   padding: 20px 40px;
@@ -19,10 +17,9 @@ body {
   width: 100%;
   padding: 20px 40px;
   background: #f4f9fd;
-  position: relative; /* importante para que el menú se posicione dentro */
+  position: relative; 
 }
 
-/* Logo */
 .logo {
   display: inline-block;
   vertical-align: middle;
@@ -38,11 +35,10 @@ body {
   margin-right: 8px;
 }
 
-/* Menú */
 .menu {
-  position: absolute;  /* 📌 mueve el menú dentro del header */
-  right: 100px;         /* lo alinea a la derecha */
-  top: 25px;           /* ajusta altura para centrar con el logo */
+  position: absolute;  
+  right: 100px;         
+  top: 25px;           
 }
 
 .menu a {
